--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -26,6 +26,7 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
         app:navGraph="@navigation/mobile_navigation"
         app:defaultNavHost="true" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
